--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "ai": "^3.3.41",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
-    "next": "14.2.11",
+    "next": "^14.2.13",
     "openai": "^4.61.1",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +30,7 @@
     "remark-html": "^16.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "unsplash-js": "^7.0.19",
     "zod": "^3.23.8"
   },
   "devDependencies": {
