--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@ai-sdk/mistral": "^0.0.41",
     "@mistralai/mistralai": "^1.0.4",
     "@nextui-org/react": "^2.4.8",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "ai": "^3.3.41",
     "axios": "^1.7.7",
@@ -31,7 +33,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
