--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
+    "next-themes": "^0.3.0",
     "openai": "^4.61.1",
     "react": "^18",
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "sonner": "^1.5.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
     "zod": "^3.23.8",
