--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.41",
+    "@hookform/resolvers": "^3.9.0",
     "@mistralai/mistralai": "^1.0.4",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "ai": "^3.3.41",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
@@ -29,6 +35,7 @@
     "openai": "^4.61.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sonner": "^1.5.0",
