--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@vercel/analytics": "^1.4.0",
     "ai": "^3.3.41",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
