--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "openai": "^4.61.1",
+    "puppeteer": "^23.11.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
